# epsilon

./: .gitignore  LICENSE  README.md  agent.py  pyproject.toml
tools/: core.py  search.py  smart_read.py  todo.py
