[project]
name = "epsilon-agent"
version = "0.1.0"
description = "Epsilon (ε): The small positive bridge between intention and code."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.1.7",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    "pyperclip>=1.8.2",
    "Pillow>=10.2.0",
    "fuzzyfinder>=2.1.0",
]

# This is the critical fix: Tell uv not to try and build this as a package
[tool.uv]
managed = true
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"